# maked_caffe_cpp

./: CMakeLists.txt  README.md
include/: detector.h
src/: detector.cpp
